--- a/acceleration.html
+++ b/acceleration.html
@@ -292,7 +292,7 @@
 <main class="main" id="main-content" role="main">
 <div class="container">
 <nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="https://calcdomain.com/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/science/physics.html">Physics</a> / Acceleration Calculator
+<a href="https://calcdomain.com/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/subcategories/physics.html">Physics</a> / Acceleration Calculator
       </nav>
 <!-- 1. Title -->
 <h1>Acceleration Calculator</h1>
