--- a/density.html
+++ b/density.html
@@ -222,7 +222,7 @@
 <a aria-label="CalcDomain — Home" class="brand" href="https://calcdomain.com/">CalcDomain</a>
 </div>
 <nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="https://calcdomain.com/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/science/physics.html">Physics</a> / Density Calculator
+<a href="https://calcdomain.com/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/subcategories/physics.html">Physics</a> / Density Calculator
       </nav>
 </div>
 </header>
