--- a/force.html
+++ b/force.html
@@ -256,7 +256,7 @@
 <main class="main-content" id="main-content">
 <div class="container">
 <nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/science/physics.html">Physics</a> / Force Calculator
+<a href="/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/subcategories/physics.html">Physics</a> / Force Calculator
       </nav>
 <h1>Force Calculator</h1>
 <p class="lede">Compute force with professional accuracy. Use F = m·a (mass and acceleration) or calculate weight on a selected planet. Built-in unit conversions and accessible design make it ideal for students, engineers and educators.</p>
