--- a/kinetic-energy.html
+++ b/kinetic-energy.html
@@ -367,7 +367,7 @@
 <main class="main-content" id="main-content">
 <div class="container">
 <nav aria-label="Breadcrumb" class="breadcrumbs">
-<a href="https://calcdomain.com/">Home</a> › <a href="https://calcdomain.com/science.html">Science</a> › <a href="https://calcdomain.com/science/physics.html">Physics</a> › Kinetic Energy Calculator
+<a href="https://calcdomain.com/">Home</a> › <a href="https://calcdomain.com/science.html">Science</a> › <a href="https://calcdomain.com/subcategories/physics.html">Physics</a> › Kinetic Energy Calculator
       </nav>
 <h1>Kinetic Energy Calculator</h1>
 <p>This kinetic energy calculator lets students, engineers, and enthusiasts compute kinetic energy (KE), mass, or velocity with instant, precise unit conversions. It eliminates guesswork and reduces errors in physics homework, engineering estimates, ballistics baselines, and lab prep.</p>
