--- a/momentum.html
+++ b/momentum.html
@@ -266,7 +266,7 @@
 
 <main class="container" id="main-content" role="main">
 <nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="https://calcdomain.com/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/science/physics.html">Physics</a> / Momentum Calculator
+<a href="https://calcdomain.com/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/subcategories/physics.html">Physics</a> / Momentum Calculator
     </nav>
 <h1>Momentum Calculator</h1>
 <p class="lead">Compute linear momentum with professional accuracy. This tool supports classical p = m·v, relativistic momentum for high speeds, and 1D two‑body collisions (elastic and inelastic). Built for students, instructors, and engineers who need reliable results quickly.</p>
