--- a/mortgage-payment.html
+++ b/mortgage-payment.html
@@ -445,7 +445,7 @@
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <h3 class="font-bold text-lg mb-4">Related Mortgage Tools</h3>
                         <ul class="space-y-3">
-                            <li><a href="mortgage-affordability.html" class="text-blue-600 hover:underline">Mortgage Affordability Calculator</a></li>
+                            <li><a href="mortgage-affordability-calculator.html" class="text-blue-600 hover:underline">Mortgage Affordability Calculator</a></li>
                             <li><a href="15-vs-30-year-mortgage.html" class="text-blue-600 hover:underline">15 vs 30 Year Mortgage Comparison</a></li>
                             <li><a href="refinance-calculator.html" class="text-blue-600 hover:underline">Refinance Calculator</a></li>
                             <li><a href="debt-to-income-ratio.html" class="text-blue-600 hover:underline">Debt-to-Income Ratio Calculator</a></li>
