--- a/potential-energy.html
+++ b/potential-energy.html
@@ -212,7 +212,7 @@
 
 <main class="container" id="main-content" role="main">
 <nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="https://calcdomain.com/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/science/physics.html">Physics</a> / Potential Energy Calculator
+<a href="https://calcdomain.com/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/subcategories/physics.html">Physics</a> / Potential Energy Calculator
     </nav>
 <h1>Potential Energy Calculator</h1>
 <p>This professional-grade tool computes potential energy for three common models: gravitational (near-surface), gravitational (two-body), and elastic (spring). It’s built for students, educators, and engineers who need precise results with transparent methodology, accessible UX, and robust unit conversions.</p>
