--- a/power.html
+++ b/power.html
@@ -374,7 +374,7 @@
 <main class="main-content" id="main-content" role="main">
 <div class="container">
 <nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="https://calcdomain.com/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/science/physics.html">Physics</a> / Power Calculator
+<a href="https://calcdomain.com/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/subcategories/physics.html">Physics</a> / Power Calculator
       </nav>
 <h1>Power Calculator</h1>
 <p>
