--- a/science.html
+++ b/science.html
@@ -112,7 +112,7 @@
         <section id="physics">
       <div class="mb-4 flex items-center justify-between">
         <h2 class="text-2xl font-bold text-slate-900">Physics &amp; Mechanics</h2>
-        <a href="physics.html" class="text-sm font-semibold text-blue-600 hover:text-blue-800">See all physics calculators →</a>
+        <a href="subcategories/physics.html" class="text-sm font-semibold text-blue-600 hover:text-blue-800">See all physics calculators →</a>
       </div>
       <div class="card-grid">
         <a href="forward-kinematics.html" class="rounded-xl border border-slate-200 bg-white p-5 shadow-sm hover:border-blue-300">
