--- a/work.html
+++ b/work.html
@@ -227,7 +227,7 @@
 
 <main class="container" id="main" role="main">
 <nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="https://calcdomain.com/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/science/physics.html">Physics</a> / Work Calculator
+<a href="https://calcdomain.com/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/subcategories/physics.html">Physics</a> / Work Calculator
     </nav>
 <h1>Work Calculator</h1>
 <p>This professional-grade physics Work Calculator computes the mechanical work done by a constant force along a straight path using W = F · d · cos(θ). It’s designed for students, engineers, and educators who need fast, precise results with rigorous unit conversions and a clear step-by-step breakdown. This tool focuses on physics work (energy transfer), not “work hours” or timecards.</p>
