--- a/hardy-weinberg.html
+++ b/hardy-weinberg.html
@@ -277,7 +277,7 @@
 </header>
 <main class="container" id="main-content" role="main">
 <nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="https://calcdomain.com/">Home</a> › <a href="https://calcdomain.com/science.html">Science</a> › <a href="https://calcdomain.com/science/biology.html">Biology</a> › Hardy-Weinberg Equilibrium Calculator
+<a href="https://calcdomain.com/">Home</a> › <a href="https://calcdomain.com/science.html">Science</a> › <a href="https://calcdomain.com/subcategories/biology.html">Biology</a> › Hardy-Weinberg Equilibrium Calculator
     </nav>
 <h1>Hardy-Weinberg Equilibrium Calculator</h1>
 <p>This professional-grade calculator helps students, educators, and researchers compute allele frequencies (p and q), expected genotype frequencies and counts, and a chi-square test for Hardy–Weinberg equilibrium (HWE). It supports two input modes: observed genotype counts or a known allele frequency with sample size.</p>
