--- a/subcategories/chemistry.html
+++ b/subcategories/chemistry.html
@@ -167,7 +167,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Solution Dilution</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Apply C₁V₁ = C₂V₂ for quick dilution series or single-step adjustments.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Apply C1V1 = C2V2 for quick dilution series or single-step adjustments.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/serial-dilution.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-purple-100 p-3 rounded-full">
@@ -191,7 +191,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">pH Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Determine pH, pOH, [H⁺], and [OH⁻] for strong acids/bases and dilute solutions.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Determine pH, pOH, [H+], and [OH-] for strong acids/bases and dilute solutions.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/henderson-hasselbalch.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-purple-100 p-3 rounded-full">
@@ -255,7 +255,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Gibbs Free Energy</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Relate ΔG, ΔH, ΔS, and temperature to determine reaction spontaneity.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Relate Delta G, Delta H, Delta S, and temperature to determine reaction spontaneity.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/isotope-abundance.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-purple-100 p-3 rounded-full">
@@ -299,9 +299,9 @@
                         <h3 class="font-bold text-lg mb-4">Related Categories</h3>
                         <ul class="space-y-3">
                             <li><a href="https://calcdomain.com/science.html" class="text-blue-600 hover:underline">Science Calculators</a></li>
-                            <li><a href="https://calcdomain.com/physics.html" class="text-blue-600 hover:underline">Physics Tools</a></li>
+                            <li><a href="https://calcdomain.com/subcategories/physics.html" class="text-blue-600 hover:underline">Physics Calculators</a></li>
                             <li><a href="https://calcdomain.com/math-conversions.html" class="text-blue-600 hover:underline">Math & Conversions</a></li>
-                            <li><a href="https://calcdomain.com/health-fitness.html" class="text-blue-600 hover:underline">Health & Fitness</a></li>
+                            <li><a href="https://calcdomain.com/subcategories/biology.html" class="text-blue-600 hover:underline">Biology Tools</a></li>
                         </ul>
                     </div>
                 </div>
