--- a/molarity.html
+++ b/molarity.html
@@ -354,7 +354,7 @@
 <main class="main-content" id="main-content" role="main">
 <div class="container">
 <nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/science/chemistry.html">Chemistry</a> / Molarity Calculator
+<a href="/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/subcategories/chemistry.html">Chemistry</a> / Molarity Calculator
       </nav>
 <h1>Molarity Calculator</h1>
 <p>This professional-grade molarity calculator helps scientists, students, and lab technicians compute solution molarity (M), the required mass of a solute, or the volume of solution needed. It supports unit conversions, inline validation, and clear step-by-step outputs to reduce setup errors at the bench.</p>
