--- a/percent-yield.html
+++ b/percent-yield.html
@@ -245,7 +245,7 @@
 <main id="main-content">
 <div class="container">
 <nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/science/chemistry.html">Chemistry</a> / Percent Yield Calculator
+<a href="/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/subcategories/chemistry.html">Chemistry</a> / Percent Yield Calculator
       </nav>
 <h1>Percent Yield Calculator</h1>
 <p>
