--- a/ph.html
+++ b/ph.html
@@ -243,7 +243,7 @@
 </div>
 </header>
 <main class="container" id="main-content" role="main">
-<nav aria-label="Breadcrumb" class="breadcrumb">Home › <a href="https://calcdomain.com/science.html">Science</a> › <a href="https://calcdomain.com/science/chemistry.html">Chemistry</a> › pH Calculator</nav>
+<nav aria-label="Breadcrumb" class="breadcrumb">Home › <a href="https://calcdomain.com/science.html">Science</a> › <a href="https://calcdomain.com/subcategories/chemistry.html">Chemistry</a> › pH Calculator</nav>
 <!-- 1. Title -->
 <h1>pH Calculator</h1>
 <!-- 2. Introduction -->
