--- a/grams-to-moles.html
+++ b/grams-to-moles.html
@@ -490,7 +490,7 @@
 <main class="main-content" id="main-content">
 <div class="container">
 <nav aria-label="breadcrumb" class="breadcrumb">
-<a href="https://calcdomain.com/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/science/chemistry.html">Chemistry</a> / Grams to Moles Calculator
+<a href="https://calcdomain.com/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/subcategories/chemistry.html">Chemistry</a> / Grams to Moles Calculator
       </nav>
 <h1>Grams to Moles Calculator</h1>
 <p>This professional calculator converts between mass (grams) and amount of substance (moles) for any chemical formula. It precisely parses formulas (including parentheses and hydrates like CuSO4·5H2O), computes molar mass from authoritative atomic weights, and returns moles, mass, and number of molecules. Ideal for students, educators, and lab professionals seeking fast, reliable results.</p>
