--- a/ideal-gas-law.html
+++ b/ideal-gas-law.html
@@ -360,7 +360,7 @@
 <main class="main-content" id="main-content" role="main">
 <div class="container">
 <nav aria-label="breadcrumb">
-<a href="https://calcdomain.com/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/science/chemistry.html">Chemistry</a> / Ideal Gas Law Calculator
+<a href="https://calcdomain.com/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/subcategories/chemistry.html">Chemistry</a> / Ideal Gas Law Calculator
       </nav>
 <div class="calculator-layout">
 <aside class="calculator-wrapper">
