--- a/limiting-reactant.html
+++ b/limiting-reactant.html
@@ -281,7 +281,7 @@
 </header>
 <main class="container" id="main" role="main">
 <nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="https://calcdomain.com/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/science/chemistry.html">Chemistry</a> / Limiting Reactant Calculator
+<a href="https://calcdomain.com/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/subcategories/chemistry.html">Chemistry</a> / Limiting Reactant Calculator
     </nav>
 <h1>Limiting Reactant Calculator</h1>
 <p>
