--- a/moles-to-grams.html
+++ b/moles-to-grams.html
@@ -269,7 +269,7 @@
 </div>
 <div class="container">
 <nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/science/chemistry.html">Chemistry</a> / Moles to Grams Calculator
+<a href="/">Home</a> / <a href="https://calcdomain.com/science.html">Science</a> / <a href="https://calcdomain.com/subcategories/chemistry.html">Chemistry</a> / Moles to Grams Calculator
       </nav>
 </div>
 </header>
