--- a/science.html
+++ b/science.html
@@ -173,7 +173,7 @@
     <section id="chemistry">
       <div class="mb-4 flex items-center justify-between">
         <h2 class="text-2xl font-bold text-slate-900">Chemistry</h2>
-        <a href="chemistry.html" class="text-sm font-semibold text-blue-600 hover:text-blue-800">Explore chemistry tools →</a>
+        <a href="subcategories/chemistry.html" class="text-sm font-semibold text-blue-600 hover:text-blue-800">Explore chemistry tools →</a>
       </div>
       <div class="card-grid">
         <a href="molecular-weight.html" class="rounded-xl border border-slate-200 bg-white p-5 shadow-sm hover:border-blue-300">
