--- a/50-30-20-budget.html
+++ b/50-30-20-budget.html
@@ -5,12 +5,12 @@
 <link rel="shortcut icon" href="https://calcdomain.com/favicon.ico" />
 <link rel="apple-touch-icon" sizes="180x180" href="https://calcdomain.com/apple-touch-icon.png" />
 <link rel="manifest" href="https://calcdomain.com/site.webmanifest" />
-<meta charset="utf-8"https://calcdomain.com/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"https://calcdomain.com/>
+<meta charset="utf-8">
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
 <title>Budget Calculator (50/30/20 Rule)</title>
 <meta content="Use the 50/30/20 budget calculator to allocate your income effectively based on needs, wants, and savings." name="description"https://calcdomain.com/>
-<meta content="Ugo Candido" name="author"https://calcdomain.com/>
-<link href="https://calcdomain.com/50-30-20-budget.html" rel="canonical"https://calcdomain.com/>
+<meta content="Ugo Candido" name="author">
+<link href="https://calcdomain.com/50-30-20-budget.html" rel="canonical">
 
 <!-- Tailwind CSS and Fonts -->
 <script src="https://cdn.tailwindcss.com"></script>
@@ -24,6 +24,8 @@
 <style>
         :root {
             --primary-color: #005A9C;
+<!-- Preload and Search Scripts -->
+<link rel="preload" href="https://calcdomain.com/assets/js/mobile-menu.js" as="script">
             --background-color: #F8F9FA;
             --text-color: #212529;
             --muted-text-color: #6C757D;
